--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Min Heap by robin-thomas</title>
+    <title>Implementation of Min Heap in C - Robin Thomas</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>Min Heap</h1>
+          <h1>A Study In Min Heap</h1>
           <h2></h2>
         </header>
 
